// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TableHeader rendering renders expected elements when both onResize and className are set 1`] = `
<th
  className="Table--resizable TestClass"
  id="test"
  style={
    {
      "width": "100px",
    }
  }
>
  <div
    className="Table__resizableLabel Table--left"
  >
    body
  </div>
  <React.Fragment>
    <div
      aria-label="Resize column"
      aria-valuemin={40}
      aria-valuenow={100}
      className="Table__resizeHandle"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onPointerDown={[Function]}
      role="slider"
      tabIndex={0}
    />
    <div
      className="Table__resizeIndicator"
    />
  </React.Fragment>
</th>
`;

exports[`TableHeader rendering renders expected elements when className is set 1`] = `
<th
  className="Table--left TestClass"
  id="test"
>
  body
</th>
`;

exports[`TableHeader rendering renders expected elements when onResize is set 1`] = `
<th
  className="Table--resizable"
  id="test"
  style={
    {
      "width": "100px",
    }
  }
>
  <div
    className="Table__resizableLabel Table--left"
  >
    body
  </div>
  <React.Fragment>
    <div
      aria-label="Resize column"
      aria-valuemin={40}
      aria-valuenow={100}
      className="Table__resizeHandle"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onPointerDown={[Function]}
      role="slider"
      tabIndex={0}
    />
    <div
      className="Table__resizeIndicator"
    />
  </React.Fragment>
</th>
`;

exports[`TableHeader rendering renders expected elements when radio is set 1`] = `
<th
  className="Table--left Table--radioHeader"
  id="test"
>
  body
</th>
`;

exports[`TableHeader rendering renders expected elements when sortable is not set 1`] = `
<th
  className="Table--left"
  id="test"
>
  body
</th>
`;

exports[`TableHeader rendering renders expected elements when sortable is true 1`] = `
<th
  aria-sort="ascending"
  className="Table--sortable"
  id="test"
>
  <button
    className="Table__sort Table__sort--active"
    type="button"
  >
    <div
      className="Table__sortLabel Table--center"
    >
      body
    </div>
    <ArrowUp
      className="Table__sortIcon"
    />
  </button>
</th>
`;

exports[`TableHeader rendering renders expected elements when sortable is true and className is set 1`] = `
<th
  aria-sort={null}
  className="Table--sortable TestClass"
  id="test"
>
  <button
    className="Table__sort"
    type="button"
  >
    <div
      className="Table__sortLabel Table--center"
    >
      body
    </div>
    <ArrowsVertical
      className="Table__sortIcon"
    />
  </button>
</th>
`;

exports[`TableHeader rendering renders expected elements when sortable is true and sortOrder is d 1`] = `
<th
  aria-sort="descending"
  className="Table--sortable"
  id="test"
>
  <button
    className="Table__sort Table__sort--active"
    type="button"
  >
    <div
      className="Table__sortLabel Table--center"
    >
      body
    </div>
    <ArrowDown
      className="Table__sortIcon"
    />
  </button>
</th>
`;

exports[`TableHeader rendering renders expected elements when sortable is true and sortOrder is not set 1`] = `
<th
  aria-sort={null}
  className="Table--sortable"
  id="test"
>
  <button
    className="Table__sort"
    type="button"
  >
    <div
      className="Table__sortLabel Table--center"
    >
      body
    </div>
    <ArrowsVertical
      className="Table__sortIcon"
    />
  </button>
</th>
`;
